Revision 2: Address review feedback
- Add SQL comment above each LIMIT 1 BY eia.id explaining why arbitrary
  pick is safe (all dupes resolve to the same stable_dataset_item_id)
- Replace .collect(Collectors.toList()) with .toList() in test